add github list/delete repo and get user-info
